[package]
name = "gfh"
version = "0.0.4"
edition = "2021"
description = "Git FIDO helper - use multiple FIDO keys to sign Git commits"
authors = ["Michael Mitchell <ovy@ovyerus.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ovyerus/gfh"
repository = "https://github.com/Ovyerus/gfh"
keywords = ["cli", "fido", "git", "ssh", "signing"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.19", features = ["derive"] }
ctap-hid-fido2 = "3.4.2"
inquire = "0.5.2"
# Uncomment once we actually need osshkeys. Or port over the key conversion stuff manually.
# openssl = { version = "0.10.42", features = ["vendored"] }
# osshkeys = "0.6.2"
sha2 = "0.10.6"
shellexpand = "2.1.2"
yubikey_api = { package = "yubikey", version = "0.6.0" }
